--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="lesson-icon">
               <img src="img/agribisnis.png">
             </div>
-            <h4 class="txt-jud">Ekonomi</h4>
+            <h4 class="txt-jud">Agribisnis</h4>
             <p class="txt-contents">Fakultas Pertanian mempelajari tentang teknologi industri pertanian dengan model 
               pembelajaran berbasis riset sehingga mampu menciptakan produk berkualitas tinggi. 
             </p>
